--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
                 <div>
                     <p class="text-white p-2 h5">Follow us</p>
                     <div>
-                        <a href=""><img class="whatsapp-icon" src="/assets/images/whatsapp.svg" alt="whatsapp icon"></a>
-                        <a href=""><img class="in-icon" src="/assets/images/in.svg" alt="in icon"></a>
+                        <a href=""><img class="whatsapp-icon" src="./assets/images/whatsapp.svg" alt="whatsapp icon"></a>
+                        <a href=""><img class="in-icon" src="./assets/images/in.svg" alt="in icon"></a>
                     </div>
                 </div>
                 <a class="footer-company-name" href="">Rixpls</a>
